--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <table>
       <tr>
-        <td class="t1-2" colspan="2"></td>
-        <td class="t3-4" colspan="2"></td>
-        <td class="t5-6" colspan="2"></td>
+        <td class="t1-2" colspan="2">cell 1</td>
+        <td class="t3-4" colspan="2">cell 2</td>
+        <td class="t5-6" colspan="2">cell 3</td>
         <td class="t7"></td>
       </tr>
       <tr>
         <td class="t8"></td>
-        <td class="t9-10" colspan="3" rowspan="2"></td>
+        <td class="t9-10" colspan="3" rowspan="2">big cell</td>
         <td class="t12-13" colspan="2"></td>
         <td class="t14-21" rowspan="3"></td>
       </tr>
@@ -37,7 +37,7 @@
       <tr>
         <td class="t29-36" rowspan="2"></td>
         <td class="t32"></td>
-        <td class="t33-34" colspan="2" rowspan="2"></td>
+        <td class="t33-34" colspan="2" rowspan="2">blue cell</td>
         <td class="t35-42" rowspan="2"></td>
       </tr>
       <tr>
